--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,22 @@
-{% extends "layouts/layout.html" %}
+<!DOCTYPE HTML>
 <title>Sonne WebGlobalPage</title>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<meta char="UTF-8">
+	<link rel="stylesheet" type="text/css" href="/static/styles.css">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+	<h1>Sonne WebGlobalPage</h1>
+	<nav>
+		<ul class="navbar1">
+		  <li class="navbar2"><a class="navbar3" href="/">Home</a></li>
+		  <li class="navbar2"><a class="active navbar3" href="about" >About</a></li>
+		</ul>
+	</nav>
+
+
 <body>
     {% block content %}
 	<title>info about Sonne WebGlobalPage</title>
@@ -7,7 +24,7 @@
 	<p>the Sonne WebGlobalPage is a bacheca for every time of message!</p>
 	<p>Made with <a href="http://flask.pocoo.org/">Flask</a> and Python 3</p>
     <p>A fork of: <a href="https://github.com/Adoria298/fez">fez</a>. Distribute under GPL-3.0 license</p>
-	<p>GitHub project: https://github.com/IlNonoP/Sonne-Bulletin-Board</p>
+	<p>GitHub project: <a href="https://github.com/IlNonoP/Sonne-Bulletin-Board">IlNonoP/Sonne Bulletin Board</a></p>
 
     {% endblock %}
 </body>
